Finbugs fixes